# kolombo

kolombo/: AUTHORS  Doxyfile  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  kbird2.kdevelop  kbird2.kdevelop.pcs  kbird2.kdevses  palomarDataTable.cw  palomas-21-12-2004
kolombo/admin/: acinclude.m4.in
kolombo/autom4te.cache/: output.0  traces.0
kolombo/doc/: Makefile.am  Makefile.in  database.sql
kolombo/doc/en/: Makefile.am  Makefile.in  index.docbook
kolombo/po/: Makefile.in
kolombo/python/: Makefile  README  connection.py  dovecoteview.py  firstrundialog.py  genprojectfiles.py  kolombo.py  kolombocentralwidget.py  kolombomainwindow.py  palomarsqlmodel.py  palomartableview.py
kolombo/python/data/: pigeondatabase.py
kolombo/python/data/es/: eyes.py  nations.py  pigeons.py  plumagecolors.py  yearcolors.py
kolombo/python/resources/lang/: kolombo_es.ts
kolombo/python/tools/: importNewData.py
kolombo/python/ui/: kolombomainwindowbase.ui  ui_firstrundialog.ui
kolombo/src/: Makefile.am  Makefile.in  arbolGenWdg.ui  arbolgen.cpp  arbolgen.h  basechart.cpp  basechart.h  buscar.cpp  buscar.cpp.cpp  buscar.cpp.h  buscar.h  buscarDlg.ui  buscarWdg.ui  comprobar.cpp  comprobar.h  comprobarDlg.ui  concursos.cpp  concursos.h  concursosWdg.ui  configuration.cpp  configuration.h  datosPalomaWdg.ui  datospaloma.cpp  datospaloma.h  exportarTaurisDlg.ui  exportarTaurisWdg.ui  generalstats.cpp  generalstats.h  gestionparametros.cpp  gestionparametros.h  kbird2-2.6.0  kbird2.cpp  kbird2.desktop  kbird2.h  kbird2.kcfg  kbird2.lsm  kbird2_client.cpp  kbird2config.kcfgc  kbird2iface.h  kbird2ui.rc  (+47 more)
kolombo/templates/: cpp
